# kube-fwd-socks

./: Cargo.toml  README.md  renovate.json
.github/workflows/: rust.yml
src/: main.rs
src/socks/: mod.rs  resolver.rs  v4.rs  v5.rs
src/socks/v5/: tests.rs
