[package]
name = "kube-fwd-socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.1", default-features = false, features = [
    "client",
    "ws",
    "rustls-tls",
] }
k8s-openapi = { version = "0.20.0", default-features = false, features = [
    "v1_26",
] }
tokio = { version = "1.35.1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.78"
thiserror = "1.0.53"
futures = "0.3.29"
int-enum = "0.5.0"

[dev-dependencies]
tokio-test = "0.4.3"
