[package]
name = "kube-fwd-socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.96.0", default-features = false, features = [
    "client",
    "ws",
    "rustls-tls",
] }
k8s-openapi = { version = "0.23.0", default-features = false, features = [
    "v1_26",
] }
tokio = { version = "1.37.0", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.82"
thiserror = "2.0.0"
futures = "0.3.30"
int-enum = "1.1.1"

[dev-dependencies]
tokio-test = "0.4.4"
